--- a/Formação Frontend Alura/html/contato.html
+++ b/Formação Frontend Alura/html/contato.html
@@ -1,10 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <title>Contato - Barbearia Alura</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+<header>
+    <div class="caixa">
+        <h1><img src="../assets/img/logo.png" alt="Logomarca da Barbearia Alura"></h1>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
+<main>
+    <form>
+        <label for="nome_sobrenome">Nome</label>
+        <input class="input-padrao" type="text" id="nome_sobrenome" required>
+
+        <label for="email">Email</label>
+        <input class="input-padrao" type="email" id="email" required placeholder="seuemail@dominio.com">
+
+        <label for="telefone">Telefone</label>
+        <input class="input-padrao" type="tel" id="telefone" required placeholder="(xx) xxxxx-xxxx">
+
+        <label for="mensagem">Mensagem</label>
+        <textarea class="input-padrao" id="mensagem" cols="70" rows="10" required></textarea>
+
+        <fieldset>
+        <legend>Como prefere o nosso contato?</legend>
+            <label><input type="radio" name="contato" id="radio-telefone">Telefone</label>
+            <label><input type="radio" name="contato" id="radio-email">Email</label>
+            <label><input type="radio" name="contato" id="radio-whatsapp" checked>WhatsApp</label>
+        </fieldset>
+
+        <fieldset>
+            <legend>Qual horário prefere ser atendido?</legend>
+            <label>
+                <select>
+                    <option>Manhã</option>
+                    <option>Tarde</option>
+                    <option>Noite</option>
+                </select>
+            </label>
+        </fieldset>
+
+        <label>
+            <input class="checkbox" type="checkbox" checked>
+            Gostaria de receber nossos emails?
+        </label>
+
+        <input class="enviar" type="submit" value="Enviar Formulário">
+    </form>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Dia</th>
+                <th>Horário</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Segunda</td>
+                <td>8h - 20h</td>
+            </tr>
+            <tr>
+                <td>Quarta</td>
+                <td>8h - 20h</td>
+            </tr>
+            <tr>
+                <td>Sexta</td>
+                <td>8h - 20h</td>
+            </tr>
+        </tbody>
+    </table>
+</main>
+
+<footer>
+    <img src="../assets/img/logo-branco.png" alt="Logomarca da Barbearia Alura.">
+    <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+</footer>
 </body>
 </html>
