--- a/Formação Frontend Alura/html/produtos.html
+++ b/Formação Frontend Alura/html/produtos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Produtos - Barbearia Alura</title>
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/produtos.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <header>
@@ -42,7 +42,8 @@
     </ul>
 </main>
 <footer>
-    <p>Mensagem do footer</p>
+    <img src="../assets/img/logo-branco.png" alt="">
+    <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
 </footer>
 </body>
 </html>
