--- a/Formação Frontend Alura/index.html
+++ b/Formação Frontend Alura/index.html
@@ -1,35 +1,66 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="css/style-home.css">
+    <title>Barbearia Alura</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<header>
-    <h1 class="titulo-principal">Barbearia Alura</h1>
-</header>
-<div class="principal">
-    <img id="banner" src="assets/img/banner.jpg" alt="Imagem do banner do site. Duas cadeiras dentro de uma barbearia.">
-    <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+    <header>
+        <div class="caixa">
+            <h1><img src="assets/img/logo.png" alt="Logomarca da Barbearia Alura"></h1>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba.
-        Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+    <img class="banner" src="assets/img/banner.jpg"
+        alt="Imagem do banner do site. Duas cadeiras dentro de uma barbearia.">
+    <main>
+        <section class="principal">
+            <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+            <img src="assets/img/utensilios.jpg" alt="Utensílios de barbearia" class="utensilios">
 
-    <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
+                para o seu cabelo e barba.
+                Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda.
-        O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-</div>
-<div class="beneficios">
-    <h3>Benefícios</h3>
-    <ul>
-        <li class="itens">Atendimento aos Clientes</li>
-        <li class="itens">Espaço diferenciado</li>
-        <li class="itens">Localização</li>
-        <li class="itens">Profissionais qualificados</li>
-    </ul>
-    <img class="imagem_beneficios" src="assets/img/beneficios.jpg" alt="Imagem da área de benefícios. Homem sendo barbeado.">
-</div>
+            <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
+                        clientes"</strong>.</em></p>
+
+            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda.
+                O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos
+                clientes.</p>
+        </section>
+        <section class="beneficios">
+            <h3 class="titulo-principal">Benefícios</h3>
+            <ul>
+                <li class="itens">Atendimento aos Clientes</li>
+                <li class="itens">Espaço diferenciado</li>
+                <li class="itens">Localização</li>
+                <li class="itens">Profissionais qualificados</li>
+            </ul>
+            <img class="imagem_beneficios" src="assets/img/beneficios.jpg"
+                alt="Imagem da área de benefícios. Homem sendo barbeado.">
+        </section>
+
+    </main>
+
+    <footer>
+        <img src="assets/img/logo-branco.png" alt="Logomarca da Barbearia Alura.">
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+    </footer>
 </body>
+
 </html>
