--- a/Formação Frontend Alura/index.html
+++ b/Formação Frontend Alura/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+    
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -17,9 +18,9 @@
             <h1><img src="assets/img/logo.png" alt="Logomarca da Barbearia Alura"></h1>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="contato.html">Contato</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="html/produtos.html">Produtos</a></li>
+                    <li><a href="html/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -27,7 +28,9 @@
 
     <img class="banner" src="assets/img/banner.jpg"
         alt="Imagem do banner do site. Duas cadeiras dentro de uma barbearia.">
+
     <main>
+
         <section class="principal">
             <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
             <img src="assets/img/utensilios.jpg" alt="Utensílios de barbearia" class="utensilios">
@@ -43,16 +46,37 @@
                 O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos
                 clientes.</p>
         </section>
+
+        <section class="mapa">
+            <h3 class="titulo-principal">Nosso estabelecimento</h3>
+            <p>Nosso estabelecimento está localizado no coração da cidade</p>
+            <div class="mapa-conteudo">
+                <iframe title="Endereço"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3778.714953679731!2d-39.854559984577186!3d-18.72157560670354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xca0dae84b8d163%3A0xf20e15f3254ec655!2sR.%20Para%C3%ADba%2C%2056%20-%20Sernamby%2C%20S%C3%A3o%20Mateus%20-%20ES%2C%2029933-050!5e0!3m2!1spt-BR!2sbr!4v1667777649488!5m2!1spt-BR!2sbr"
+                    width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
+
         <section class="beneficios">
             <h3 class="titulo-principal">Benefícios</h3>
-            <ul>
-                <li class="itens">Atendimento aos Clientes</li>
-                <li class="itens">Espaço diferenciado</li>
-                <li class="itens">Localização</li>
-                <li class="itens">Profissionais qualificados</li>
-            </ul>
-            <img class="imagem_beneficios" src="assets/img/beneficios.jpg"
-                alt="Imagem da área de benefícios. Homem sendo barbeado.">
+            <div class="conteudo-beneficios">
+                <ul class="lista-beneficios">
+                    <li class="itens">Atendimento aos Clientes</li>
+                    <li class="itens">Espaço diferenciado</li>
+                    <li class="itens">Localização</li>
+                    <li class="itens">Profissionais qualificados</li>
+                    <li class="itens">Pontualidade</li>
+                    <li class="itens">Limpeza</li>
+                </ul><img class="imagem-beneficios" src="assets/img/beneficios.jpg"
+                    alt="Imagem da área de benefícios. Homem sendo barbeado.">
+            </div>
+            <div class="video">
+                <iframe title="Iframe de vídeo" width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
         </section>
 
     </main>
@@ -61,6 +85,7 @@
         <img src="assets/img/logo-branco.png" alt="Logomarca da Barbearia Alura.">
         <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
     </footer>
+
 </body>
 
 </html>
