--- a/Formação Frontend Alura/html/contato.html
+++ b/Formação Frontend Alura/html/contato.html
@@ -23,67 +23,78 @@
     </header>
 
     <main>
-        <form>
-            <label for="nome_sobrenome">Nome</label>
-            <input class="input-padrao" type="text" id="nome_sobrenome" required>
+        <section class="principal">
+            <form>
+                <label for="nome_sobrenome">Nome</label>
+                <input class="input-padrao" type="text" id="nome_sobrenome" required>
 
-            <label for="email">Email</label>
-            <input class="input-padrao" type="email" id="email" required placeholder="seuemail@dominio.com">
+                <label for="email">Email</label>
+                <input class="input-padrao" type="email" id="email" required placeholder="seuemail@dominio.com">
 
-            <label for="telefone">Telefone</label>
-            <input class="input-padrao" type="tel" id="telefone" required placeholder="(xx) xxxxx-xxxx">
+                <label for="telefone">Telefone</label>
+                <input class="input-padrao" type="tel" id="telefone" required placeholder="(xx) xxxxx-xxxx">
 
-            <label for="mensagem">Mensagem</label>
-            <textarea class="input-padrao" id="mensagem" cols="70" rows="10" required></textarea>
+                <label for="mensagem">Mensagem</label>
+                <textarea class="input-padrao" id="mensagem" cols="70" rows="10" required></textarea>
 
-            <fieldset>
-                <legend>Como prefere o nosso contato?</legend>
-                <label><input type="radio" name="contato" id="radio-telefone">Telefone</label>
-                <label><input type="radio" name="contato" id="radio-email">Email</label>
-                <label><input type="radio" name="contato" id="radio-whatsapp" checked>WhatsApp</label>
-            </fieldset>
+                <ul class="grid-inputs">
+                    <li>
+                        <fieldset class="input-radio">
+                            <legend>Como prefere o nosso contato?</legend>
+                            <label><input type="radio" name="contato" id="radio-telefone">Telefone</label>
+                            <label><input type="radio" name="contato" id="radio-email">Email</label>
+                            <label><input type="radio" name="contato" id="radio-whatsapp" checked>WhatsApp</label>
+                        </fieldset>
+                    </li>
+                    <li>
+                        <fieldset class="input-select">
+                            <legend>Qual horário prefere ser atendido?</legend>
+                            <label>
+                                <select>
+                                    <option>Manhã</option>
+                                    <option>Tarde</option>
+                                    <option>Noite</option>
+                                </select>
+                            </label>
+                        </fieldset>
+                    </li>
+                    <li>
+                        <label class="input-checkbox">
+                            <input class="checkbox" type="checkbox" checked>
+                            Gostaria de receber nossos emails?
+                        </label>
+                    </li>
+                    <li>
+                        <div class="button-submit">
+                            <input class="enviar" type="submit" value="Enviar Formulário">
+                        </div>
+                    </li>
+                </ul>
+            </form>
 
-            <fieldset>
-                <legend>Qual horário prefere ser atendido?</legend>
-                <label>
-                    <select>
-                        <option>Manhã</option>
-                        <option>Tarde</option>
-                        <option>Noite</option>
-                    </select>
-                </label>
-            </fieldset>
-
-            <label>
-                <input class="checkbox" type="checkbox" checked>
-                Gostaria de receber nossos emails?
-            </label>
-
-            <input class="enviar" type="submit" value="Enviar Formulário">
-        </form>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Dia</th>
-                    <th>Horário</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Segunda</td>
-                    <td>8h - 20h</td>
-                </tr>
-                <tr>
-                    <td>Quarta</td>
-                    <td>8h - 20h</td>
-                </tr>
-                <tr>
-                    <td>Sexta</td>
-                    <td>8h - 20h</td>
-                </tr>
-            </tbody>
-        </table>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Segunda</td>
+                        <td>8h - 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Quarta</td>
+                        <td>8h - 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta</td>
+                        <td>8h - 20h</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
 
     <footer>
