Arquivos do curso de acessibilidade

--- a/Formação Frontend Alura/html/contato.html
+++ b/Formação Frontend Alura/html/contato.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Contato - Barbearia Alura</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -66,7 +67,7 @@
                     </li>
                     <li>
                         <div class="button-submit">
-                            <input class="enviar" type="submit" value="Enviar Formulário">
+                            <input class="enviar" type="submit" value="Enviar">
                         </div>
                     </li>
                 </ul>
