--- a/arquitetura-css-assets/index.html
+++ b/arquitetura-css-assets/index.html
@@ -7,25 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Fruta & Fruto</title>
-    <link href="./assets/css/normalize.css" rel="stylesheet" />
-    <link href="./assets/css/reset.css" rel="stylesheet" />
-    <link href="./assets/css/cabecalho.css" rel="stylesheet">
-    <link href="./assets/css/menu/menu-lista.css" rel="stylesheet">
-    <link href="./assets/css/menu/menu-item.css" rel="stylesheet">
-    <link href="./assets/css/menu/menu-link.css" rel="stylesheet">
-    <link href="./assets/css/banner/banner.css" rel="stylesheet">
-    <link href="./assets/css/banner/banner-imagem.css" rel="stylesheet">
-    <link href="./assets/css/banner/banner-titulo.css" rel="stylesheet">
-    <link href="./assets/css/sobre/sobre.css" rel="stylesheet">
-    <link href="./assets/css/sobre/sobre-descricao.css" rel="stylesheet">
-    <link href="./assets/css/sobre/sobre-titulo.css" rel="stylesheet">
-    <link href="./assets/css/receita/receita.css" rel="stylesheet">
-    <link href="./assets/css/receita/receita-botao.css" rel="stylesheet">
-    <link href="./assets/css/receita/receita-conteudo.css" rel="stylesheet">
-    <link href="./assets/css/receita/receita-descricao.css" rel="stylesheet">
-    <link href="./assets/css/receita/receita-imagem.css" rel="stylesheet">
-    <link href="./assets/css/receita/receita-titulo.css" rel="stylesheet">
-    <link href="./assets/css/receitas.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/normalize.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/cabecalho.css">
+    <link rel="stylesheet" href="./assets/css/menu/menu-lista.css">
+    <link rel="stylesheet" href="./assets/css/menu/menu-item.css">
+    <link rel="stylesheet" href="./assets/css/menu/menu-link.css">
+    <link rel="stylesheet" href="./assets/css/banner/banner.css">
+    <link rel="stylesheet" href="./assets/css/banner/banner-imagem.css">
+    <link rel="stylesheet" href="./assets/css/banner/banner-titulo.css">
+    <link rel="stylesheet" href="./assets/css/sobre/sobre.css">
+    <link rel="stylesheet" href="./assets/css/sobre/sobre-descricao.css">
+    <link rel="stylesheet" href="./assets/css/sobre/sobre-titulo.css">
+    <link rel="stylesheet" href="./assets/css/receita/receita.css">
+    <link rel="stylesheet" href="./assets/css/receita/receita-botao.css">
+    <link rel="stylesheet" href="./assets/css/receita/receita-conteudo.css">
+    <link rel="stylesheet" href="./assets/css/receita/receita-descricao.css">
+    <link rel="stylesheet" href="./assets/css/receita/receita-imagem.css">
+    <link rel="stylesheet" href="./assets/css/receita/receita-titulo.css">
+    <link rel="stylesheet" href="./assets/css/receitas.css">
+    <link rel="stylesheet" href="./assets/css/quemSomos/quemSomos.css">
+    <link rel="stylesheet" href="./assets/css/quemSomos/quemSomos-descricao.css">
+    <link rel="stylesheet" href="./assets/css/quemSomos/quemSomos-titulo.css">
+    <link rel="stylesheet" href="./assets/css/pessoas.css">
+    <link rel="stylesheet" href="./assets/css/pessoa/pessoa.css">
+    <link rel="stylesheet" href="./assets/css/pessoa/pessoa-funcao.css">
+    <link rel="stylesheet" href="./assets/css/pessoa/pessoa-imagem.css">
+    <link rel="stylesheet" href="./assets/css/pessoa/pessoa-nome.css">
 </head>
 
 <body>
