--- a/aluraplay-requisicoes-main/index.html
+++ b/aluraplay-requisicoes-main/index.html
@@ -22,8 +22,8 @@
 
 				<div class="cabecalho__pesquisar">
 
-					<input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input">
-					<button class="pesquisar__botao"></div>
+					<input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input" data-pesquisa>
+					<button class="pesquisar__botao" data-botao-pesquisa></div>
 
 					<div class="cabecalho__icones">
 						<a href="./pages/enviar-video.html" class="cabecalho__videos"></a>
@@ -36,6 +36,7 @@
 			</ul>
 			<script src="js/mostrarVideos.js" type="module"></script>
             <!--precisa colocar o type="module quando for trabalhar com import/export"-->
+			<script src="js/buscarVideo.js" type="module"></script>
 		</body>
 	</body>
 </html>
