--- a/alura-typer/public/principal.html
+++ b/alura-typer/public/principal.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<title>Alura Typer</title>
-	</head>
-	<body>
-		<h1>Alura Typer</h1>
-		<p class="frase">Mas nem tanto</p>
 
-		<ul class="informacoes">
-			<li><span id="tamanho-frase">5</span> palavras</li>
-			<li><span id="tempo-digitacao">10</span> segundos</li>
+<head>
+    <meta charset="UTF-8">
+    <title>Alura Typer</title>
+    <link rel="stylesheet" href="css/libs/materialize.min.css">
+    <link rel="stylesheet" href="css/libs/google-fonts.css">
+    <link rel="stylesheet" href="css/estilos.css"> 
+</head>
+
+<body>
+	<div class="container">
+		<h1 class="center">Alura Typer</h1>
+		<p class="frase">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis quam incidunt quidem quod at delectus, natus id similique tenetur ullam praesentium asperiores ipsam alias sequi excepturi aliquid corrupti voluptates. Sit.</p>
+
+		<ul class="informacoes center">
+			<li>
+				<i class="small material-icons icones">description</i>
+				<span id="tamanho-frase">5</span> palavras
+			</li>
+			<li>
+				<i class="small material-icons icones">query_builder</i>
+				<span id="tempo-digitacao">10</span> segundos
+			</li>
 		</ul>
 
-        <textarea class="campo-digitacao" cols="40" rows="10"></textarea>
+		<textarea class="campo-digitacao" cols="40" rows="10"></textarea>
+		<a id="botao-reiniciar" class="btn-floating btn-large waves-effect waves-light red">
+			<i class="material-icons">restore</i>
+		</a>
 
-        <ul>
-            <li><span id="contador-caracteres"></span> Caracteres</li>
-            <li><span id="contador-palavras"></span> Palavras</li>
-        </ul>
+		<ul class="center">
+			<li><span id="contador-caracteres">0</span> Caracteres</li>
+			<li><span id="contador-palavras">0</span> Palavras</li>
+		</ul>
+	</div>
+	<script src="js/jquery.js"></script>
+	<script src="js/main.js"></script>
+</body>
 
-		<script src="js/jquery.js"></script>
-		<script src="js/main.js"></script>
-		<!-- Seja bem vindo ao curso de jQuery :) -->
-	</body>
 </html>
