--- a/alura-typer/public/principal.html
+++ b/alura-typer/public/principal.html
@@ -19,7 +19,7 @@
             </li>
             <li>
                 <i class="small material-icons icones">query_builder</i>
-                <span id="tempo-digitacao">10</span> segundos
+                <span id="tempo-digitacao">2</span> segundos
             </li>
         </ul>
 
@@ -31,6 +31,9 @@
             </a>
 			<a id="botao-placar" class="btn-floating btn-large waves-effect waves-light green">
                 <i class="material-icons">assignment</i>
+            </a>
+			<a id="botao-frase" class="btn-floating btn-large waves-effect waves-light blue">
+                <i class="material-icons">shuffle</i>
             </a>
         </div>
 
@@ -59,6 +62,6 @@
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
     <script src="js/placar.js"></script>
-
+    <script src="js/frase.js"></script>
 </body>
 </html>
