--- a/alura-typer/public/principal.html
+++ b/alura-typer/public/principal.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Alura Typer</title>
@@ -7,11 +8,16 @@
     <link rel="stylesheet" href="css/libs/google-fonts.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
     <div class="container">
         <h1 class="center">Alura Typer</h1>
-        <p class="frase center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
+        <p class="frase center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua.</p>
+        <div class="center">
+            <img src="img/spinner.gif" alt="Carregando" id="spinner">
+            <p id="erro">Ocorreu um erro. Por favor tente novamente.</p>
+        </div>
         <ul class="informacoes center">
             <li>
                 <i class="small material-icons icones">description</i>
@@ -23,17 +29,24 @@
             </li>
         </ul>
 
-        <textarea class="campo-digitacao" rows="8" cols ="40"></textarea>
+        <textarea class="campo-digitacao" rows="8" cols="40"></textarea>
 
         <div class="botoes">
             <a id="botao-reiniciar" class="btn-floating btn-large waves-effect waves-light red">
                 <i class="material-icons">restore</i>
             </a>
-			<a id="botao-placar" class="btn-floating btn-large waves-effect waves-light green">
+            <a id="botao-placar" class="btn-floating btn-large waves-effect waves-light green">
                 <i class="material-icons">assignment</i>
             </a>
-			<a id="botao-frase" class="btn-floating btn-large waves-effect waves-light blue">
+            <a id="botao-frase" class="btn-floating btn-large waves-effect waves-light blue">
                 <i class="material-icons">shuffle</i>
+            </a>
+            <a id="botao-frase-id" class="btn-floating btn-large waves-effect waves-light cyan">
+                <i class="material-icons">repeat_one</i>
+            </a>
+            <input type="number" min="0" id="frase-id">
+            <a id="botao-sync" class="btn-floating btn-large waves-effect waves-light yellow">
+                <i class="material-icons">swap_vert</i>
             </a>
         </div>
 
@@ -64,4 +77,5 @@
     <script src="js/placar.js"></script>
     <script src="js/frase.js"></script>
 </body>
+
 </html>
